--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="java.js" defer></script>
 </head>
 <body>
+    <div class="top">
+        <button type="button" class="cugrid">click</button>
+    </div>
     <div class="container">
 
     </div>
